Some small cleanups + faster jar extraction